feat(factory): port review skills flow-plan-review and flow-impl-review
- Add flow-plan-review SKILL.md with semantic description for Factory model-invoked triggering
- Add flow-plan-review workflow.md with RepoPrompt integration and fix loop
- Add flow-impl-review SKILL.md with semantic description for Factory model-invoked triggering
- Add flow-impl-review workflow.md with RepoPrompt integration and fix loop
- Include Verification sections with 4-backtick format in both skills
- Use dynamic repo root paths with graceful degradation
- Document Carmack-level review standards
- Remove hooks dependency, converted to documented best practices
- All skills use flowctl rp commands for RepoPrompt integration

Task: fn-2-l67.4

--- a/.flow/tasks/fn-2-l67.3.md
+++ b/.flow/tasks/fn-2-l67.3.md
@@ -85,11 +85,8 @@ ls "$REPO_ROOT/.factory/skills/flow-next/SKILL.md"
 - [ ] 所有技能文件 < 500 行
 
 ## Done summary
-
-TBD
-
+Ported 4 core skills (flow-next, flow-plan, flow-work, flow-interview) to Factory format with semantic descriptions, Verification sections using 4-backtick format, and dynamic $REPO_ROOT path resolution.
 ## Evidence
-
-- Commits:
-- Tests:
+- Commits: 82151d498fe48c25ec7db193d670e84bf7a2624c
+- Tests: wc -l (line count verification < 500)
 - PRs:
